--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: e-commerce-docker
+name: tester-docker
 
 on:
   push:
@@ -18,8 +18,8 @@ jobs:
       - name: "Login to Dockerhub"
         uses: docker/login-action@v1
         with:
-          username: ${{ r154ng }}
-          password: ${{ Daniswara123 }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: "Build and push"
         run: |
@@ -92,8 +92,8 @@ jobs:
           username: ubuntu
           key: ${{secrets.OCI_INSTANCE_KEY}}
           script: |
-            sudo docker pull muhammadshiva/e-commerce-docker
-            sudo docker pull muhammadshiva/e-commerce-docker-web_server
+            sudo docker pull Zwarzen/tester-docker
+            sudo docker pull Zwarzen/tester-docker-web_server
             sudo docker-compose up -d
             sudo docker exec app /bin/bash -c "php artisan key:generate"
             sudo docker exec app /bin/bash -c "echo 'DB_CONNECTION=${{ secrets.DB_CONNECTION }}' >> .env"
