--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
       - name: "Login to Dockerhub"
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.r154ng }}
+          password: ${{ secrets.94efbf05-da9c-4dfa-b7bd-a2736b7a9912 }}
 
       - name: "Build and push"
         run: |
